GNOME Bugzilla – Bug 501070
Missing Help button
Last modified: 2011-11-11 10:03:55 UTC
There could be Help button on bottom left side of the Edit-Preferences dialog
THe GNOME HIG also states that Preference windows might have a Help button, but it's not mandatory [1], so this should be set as a wishlist item, enhancement. [1] http://developer.gnome.org/hig-book/3.0/hig-book.html#preference-windows
And also marked as NEW, as this is a valid request, which can be confirmed.
Created attachment 191540 [details] [review] Patch to add the Help button to the preferences dialog I have attached a simple patch, that shows a help button on the left side of the preferences dialog's action area, and when clicked, displays the preferences section of the current help document.
The following fix has been pushed: 6bd176c Add Help button to the preferences dialog Thanks. Please use 'git format-patch' to create the patch next time.
Created attachment 191658 [details] [review] Add Help button to the preferences dialog
I have created the patch from git master using the command `git format-patch origin`. What was wrong with the patch? Just asking to know what should I do differently next time.
You're absolutely right! Sorry. :P Thanks again.