Add Help button to the preferences dialog

https://bugzilla.gnome.org/show_bug.cgi?id=501070